# proarrow

./: .gitignore  .hlint.yaml  CHANGELOG.md  LICENSE  README.md  fourmolu.yaml  haskell-ci.patch  mkdocs.sh  proarrow.cabal
.github/workflows/: haskell-ci.yml
docs/: Proarrow-Adjunction.html  Proarrow-Category-Bicategory-Adj.html  Proarrow-Category-Bicategory-Bidiscrete.html  Proarrow-Category-Bicategory-Cat.html  Proarrow-Category-Bicategory-CategoryAsBi.html  Proarrow-Category-Bicategory-Co.html  Proarrow-Category-Bicategory-Hom.html  Proarrow-Category-Bicategory-Kan.html  Proarrow-Category-Bicategory-Limit.html  Proarrow-Category-Bicategory-MonoidalAsBi.html  Proarrow-Category-Bicategory-Op.html  Proarrow-Category-Bicategory-Product.html  Proarrow-Category-Bicategory-Prof.html  Proarrow-Category-Bicategory-Relative.html  Proarrow-Category-Bicategory-Strictified.html  Proarrow-Category-Bicategory-Sub.html  Proarrow-Category-Bicategory-Terminal.html  Proarrow-Category-Bicategory.html  Proarrow-Category-Colimit.html  Proarrow-Category-Coproduct.html  Proarrow-Category-Dagger.html  Proarrow-Category-Double-BiAsDouble.html  Proarrow-Category-Double-Prof.html  Proarrow-Category-Double-ProfFun.html  Proarrow-Category-Double-Quintet.html  Proarrow-Category-Double.html  Proarrow-Category-Enriched-Bipara.html  Proarrow-Category-Enriched-Dagger.html  Proarrow-Category-Enriched-ThinCategory.html  Proarrow-Category-Enriched.html  Proarrow-Category-Equipment-BiAsEquipment.html  Proarrow-Category-Equipment-Limit.html  Proarrow-Category-Equipment-Quintet.html  Proarrow-Category-Equipment-Stateful.html  Proarrow-Category-Equipment.html  Proarrow-Category-Free.html  Proarrow-Category-Hask.html  Proarrow-Category-Instance-Ap.html  Proarrow-Category-Instance-Bool.html  Proarrow-Category-Instance-Cat.html  (+163 more)
docs/src/: Proarrow.Adjunction.html  Proarrow.Category.Bicategory.Adj.html  Proarrow.Category.Bicategory.Bidiscrete.html  Proarrow.Category.Bicategory.Cat.html  Proarrow.Category.Bicategory.CategoryAsBi.html  Proarrow.Category.Bicategory.Co.html  Proarrow.Category.Bicategory.Hom.html  Proarrow.Category.Bicategory.Kan.html  Proarrow.Category.Bicategory.Limit.html  Proarrow.Category.Bicategory.MonoidalAsBi.html  Proarrow.Category.Bicategory.Op.html  Proarrow.Category.Bicategory.Product.html  Proarrow.Category.Bicategory.Prof.html  Proarrow.Category.Bicategory.Relative.html  Proarrow.Category.Bicategory.Strictified.html  Proarrow.Category.Bicategory.Sub.html  Proarrow.Category.Bicategory.Terminal.html  Proarrow.Category.Bicategory.html  Proarrow.Category.Colimit.html  Proarrow.Category.Dagger.html  Proarrow.Category.Double.BiAsDouble.html  Proarrow.Category.Double.Prof.html  Proarrow.Category.Double.ProfFun.html  Proarrow.Category.Double.Quintet.html  Proarrow.Category.Double.html  Proarrow.Category.Enriched.Bipara.html  Proarrow.Category.Enriched.Dagger.html  Proarrow.Category.Enriched.ThinCategory.html  Proarrow.Category.Enriched.html  Proarrow.Category.Equipment.BiAsEquipment.html  Proarrow.Category.Equipment.Limit.html  Proarrow.Category.Equipment.Quintet.html  Proarrow.Category.Equipment.Stateful.html  Proarrow.Category.Equipment.html  Proarrow.Category.Instance.Ap.html  Proarrow.Category.Instance.Bool.html  Proarrow.Category.Instance.Cat.html  Proarrow.Category.Instance.Collage.html  Proarrow.Category.Instance.Constraint.html  Proarrow.Category.Instance.Coproduct.html  (+99 more)
src/: Proarrow.hs
src/Proarrow/: Adjunction.hs  Category.hs  Core.hs  Functor.hs  Monad.hs  Monoid.hs  Object.hs  Optic.hs  Preorder.hs  Profunctor.hs  Promonad.hs  Squares.hs  Universal.hs
src/Proarrow/Category/: Bicategory.hs  Colimit.hs  Dagger.hs  Double.hs  Enriched.hs  Equipment.hs  Limit.hs  Monoidal.hs  Opposite.hs  Promonoidal.hs
src/Proarrow/Category/Bicategory/: Adj.hs  Bidiscrete.hs  Cat.hs  CategoryAsBi.hs  Co.hs  Hom.hs  Kan.hs  LaxFunctor.hs  Limit.hs  Mod.hs  MonoidalAsBi.hs  Op.hs  Product.hs  Prof.hs  Relative.hs  Strictified.hs  Sub.hs  Terminal.hs  ThinCategoryAsBi.hs
src/Proarrow/Category/Double/: BiAsDouble.hs  Prof.hs  ProfFun.hs  Quintet.hs
src/Proarrow/Category/Enriched/: Bipara.hs  Dagger.hs  Thin.hs  ThinCategory.hs
src/Proarrow/Category/Equipment/: BiAsEquipment.hs  Limit.hs  Quintet.hs  Stateful.hs
src/Proarrow/Category/Instance/: Ap.hs  BiAsCategory.hs  Bool.hs  Cat.hs  CatFun.hs  CatProf.hs  Collage.hs  Constraint.hs  Coproduct.hs  Cospan.hs  Cost.hs  Discrete.hs  Display.hs  Duploid.hs  Fam.hs  Fin.hs  FinRel.hs  FinSet.hs  Free.hs  Graph.hs  Hask.hs  IntConstruction.hs  Kleisli.hs  Lifted.hs  Linear.hs  List.hs  Mat.hs  Nat.hs  PointedHask.hs  PreorderAsCategory.hs  Product.hs  Prof.hs  Rel.hs  Rep.hs  Simplex.hs  Span.hs  Sub.hs  Subcategory.hs  Unit.hs  ZX.hs  (+1 more)
src/Proarrow/Category/Monoidal/: Action.hs  Applicative.hs  CopyDiscard.hs  Distributive.hs  Endo.hs  Hypergraph.hs  Optic.hs  Product.hs  Rev.hs  Strictified.hs
src/Proarrow/Helper/: CCC.hs
src/Proarrow/Monoid/: Applicative.hs
src/Proarrow/Object/: BinaryCoproduct.hs  BinaryProduct.hs  Coexponential.hs  Copower.hs  Dual.hs  Exponential.hs  Initial.hs  NaturalNumbers.hs  Power.hs  Pullback.hs  Pushout.hs  Terminal.hs
src/Proarrow/Preorder/: Constraint.hs  Discrete.hs  ThinCategory.hs
src/Proarrow/Profunctor/: Arrow.hs  Codiscrete.hs  Cofree.hs  Composition.hs  Constant.hs  Coproduct.hs  Corepresentable.hs  Costar.hs  Coyoneda.hs  Day.hs  Direpresentable.hs  Exponential.hs  Fix.hs  Fold.hs  Forget.hs  Free.hs  HaskValue.hs  Identity.hs  Initial.hs  List.hs  PastroTambara.hs  Product.hs  Ran.hs  Representable.hs  Rift.hs  Star.hs  Terminal.hs  Wrapped.hs  Yoneda.hs
src/Proarrow/Promonad/: Collage.hs  Cont.hs  Reader.hs  State.hs  Writer.hs
src/Proarrow/Squares/: Limit.hs  Relative.hs
src/Proarrow/Tools/: CCC.hs  Laws.hs
test/: Main.hs  Props.hs  TestFree.hs  Testable.hs
test/Examples/: SimplyTypedLambdaCalculus.hs  UntypedLambdaCalculus.hs
test/Props/: Bool.hs  Cospan.hs  Dot.hs  FinRel.hs  FinSet.hs  Free.hs  Hask.hs  Kleisli.hs  Linear.hs  Mat.hs  PointedHask.hs  Simplex.hs  Span.hs  ZX.hs
(+1 files in other folders)
