cabal-version:      2.4
name:               proarrow
version:            0
synopsis:           Category theory with a central role for profunctors
homepage:           https://github.com/sjoerdvisscher/proarrow
bug-reports:        https://github.com/sjoerdvisscher/proarrow/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sjoerd Visscher
maintainer:         sjoerd@w3future.com
category:           Math

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Proarrow
        Proarrow.Adjunction
        Proarrow.Category
        Proarrow.Category.Colimit
        Proarrow.Category.Instance.Bool
        Proarrow.Category.Instance.Cat
        Proarrow.Category.Instance.Coproduct
        Proarrow.Category.Instance.Free
        Proarrow.Category.Instance.Hask
        Proarrow.Category.Instance.Nat
        Proarrow.Category.Instance.Product
        Proarrow.Category.Instance.Prof
        Proarrow.Category.Instance.Subcategory
        Proarrow.Category.Instance.Unit
        Proarrow.Category.Instance.Zero
        Proarrow.Category.Limit
        Proarrow.Category.Monoidal
        Proarrow.Category.Opposite
        Proarrow.Core
        Proarrow.Functor
        Proarrow.Monoid
        Proarrow.Monoid.Applicative
        Proarrow.Object
        Proarrow.Object.BinaryProduct
        Proarrow.Object.BinaryCoproduct
        Proarrow.Object.Exponential
        Proarrow.Object.Initial
        Proarrow.Object.Terminal
        Proarrow.Profunctor
        Proarrow.Profunctor.Composition
        Proarrow.Profunctor.Coproduct
        Proarrow.Profunctor.Corepresentable
        Proarrow.Profunctor.Costar
        Proarrow.Profunctor.Coyoneda
        Proarrow.Profunctor.Day
        Proarrow.Profunctor.Exponential
        Proarrow.Profunctor.Fix
        Proarrow.Profunctor.Forget
        Proarrow.Profunctor.Identity
        Proarrow.Profunctor.Initial
        Proarrow.Profunctor.Product
        Proarrow.Profunctor.Ran
        Proarrow.Profunctor.Representable
        Proarrow.Profunctor.Rift
        Proarrow.Profunctor.Star
        Proarrow.Profunctor.Terminal
        Proarrow.Profunctor.Yoneda
        Proarrow.Promonad
        Proarrow.Promonad.Collage
        Proarrow.Promonad.Reader
        Proarrow.Promonad.State
        Proarrow.Promonad.Writer

    default-extensions:
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DerivingVia
        EmptyCase
        EmptyDataDecls
        FlexibleContexts
        FlexibleInstances
        GADTs
        ImportQualifiedPost
        InstanceSigs
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        PolyKinds
        QuantifiedConstraints
        RankNTypes
        RoleAnnotations
        ScopedTypeVariables
        StandaloneDeriving
        StandaloneKindSignatures
        TypeApplications
        TypeFamilies
        TypeOperators
        UndecidableInstances
        UndecidableSuperClasses

    build-depends:    base ^>=4.18.0.0
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
