cabal-version:      2.4
name:               proarrow
version:            0
synopsis:           Category theory with a central role for profunctors
homepage:           https://github.com/sjoerdvisscher/proarrow
bug-reports:        https://github.com/sjoerdvisscher/proarrow/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sjoerd Visscher
maintainer:         sjoerd@w3future.com
category:           Math

extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:
        Proarrow
        Proarrow.Adjunction
        Proarrow.Category
        Proarrow.Category.Bicategory
        -- Proarrow.Category.Bicategory.Adj
        Proarrow.Category.Bicategory.Bidiscrete
        Proarrow.Category.Bicategory.CategoryAsBi
        Proarrow.Category.Bicategory.Co
        Proarrow.Category.Bicategory.Hom
        Proarrow.Category.Bicategory.Kan
        -- Proarrow.Category.Bicategory.Mod
        Proarrow.Category.Bicategory.MonoidalAsBi
        Proarrow.Category.Bicategory.Op
        Proarrow.Category.Bicategory.Product
        Proarrow.Category.Bicategory.Prof
        Proarrow.Category.Bicategory.Sub
        Proarrow.Category.Bicategory.Terminal
        Proarrow.Category.Colimit
        Proarrow.Category.Dagger
        Proarrow.Category.Equipment
        Proarrow.Category.Equipment.BiAsEquipment
        Proarrow.Category.Equipment.Limit
        Proarrow.Category.Equipment.Quintet
        Proarrow.Category.Enriched
        Proarrow.Category.Enriched.Bipara
        Proarrow.Category.Instance.Bool
        Proarrow.Category.Instance.Cat
        Proarrow.Category.Instance.Collage
        Proarrow.Category.Instance.Constraint
        Proarrow.Category.Instance.Coproduct
        Proarrow.Category.Instance.Fin
        Proarrow.Category.Instance.Free
        Proarrow.Category.Instance.Hask
        -- Proarrow.Category.Instance.IntConstruction
        Proarrow.Category.Instance.Kleisli
        Proarrow.Category.Instance.Linear
        Proarrow.Category.Instance.List
        Proarrow.Category.Instance.Mat
        Proarrow.Category.Instance.Nat
        Proarrow.Category.Instance.PointedHask
        Proarrow.Category.Instance.PreorderAsCategory
        Proarrow.Category.Instance.Product
        Proarrow.Category.Instance.Prof
        Proarrow.Category.Instance.Simplex
        Proarrow.Category.Instance.Sub
        Proarrow.Category.Instance.Unit
        Proarrow.Category.Instance.Zero
        Proarrow.Category.Limit
        Proarrow.Category.Monoidal
        Proarrow.Category.Monoidal.Applicative
        Proarrow.Category.Monoidal.Distributive
        Proarrow.Category.Monoidal.Endo
        Proarrow.Category.Monoidal.Optic
        Proarrow.Category.Monoidal.Rev
        Proarrow.Category.Opposite
        Proarrow.Core
        Proarrow.Functor
        Proarrow.Helper.CCC
        Proarrow.Monoid
        Proarrow.Object
        Proarrow.Object.BinaryProduct
        Proarrow.Object.BinaryCoproduct
        Proarrow.Object.Coexponential
        Proarrow.Object.Dual
        Proarrow.Object.Exponential
        Proarrow.Object.Initial
        Proarrow.Object.Terminal
        Proarrow.Preorder
        Proarrow.Preorder.Constraint
        Proarrow.Preorder.Discrete
        Proarrow.Preorder.ThinCategory
        Proarrow.Profunctor
        Proarrow.Profunctor.Cofree
        Proarrow.Profunctor.Composition
        Proarrow.Profunctor.Coproduct
        Proarrow.Profunctor.Corepresentable
        Proarrow.Profunctor.Costar
        Proarrow.Profunctor.Coyoneda
        Proarrow.Profunctor.Day
        Proarrow.Profunctor.Exponential
        Proarrow.Profunctor.Fix
        Proarrow.Profunctor.Forget
        Proarrow.Profunctor.Free
        Proarrow.Profunctor.Identity
        Proarrow.Profunctor.Initial
        Proarrow.Profunctor.Product
        Proarrow.Profunctor.Ran
        Proarrow.Profunctor.Representable
        Proarrow.Profunctor.Rift
        Proarrow.Profunctor.Star
        Proarrow.Profunctor.Terminal
        Proarrow.Profunctor.Wrapped
        Proarrow.Profunctor.Yoneda
        Proarrow.Promonad
        Proarrow.Promonad.Reader
        Proarrow.Promonad.State
        Proarrow.Promonad.Writer

    default-extensions:
        BangPatterns
        BlockArguments
        ConstraintKinds
        DataKinds
        DefaultSignatures
        DerivingVia
        EmptyCase
        EmptyDataDecls
        FlexibleContexts
        FlexibleInstances
        FunctionalDependencies
        GADTs
        ImportQualifiedPost
        InstanceSigs
        LambdaCase
        MultiParamTypeClasses
        NoImplicitPrelude
        NoStarIsType
        PatternSynonyms
        PolyKinds
        QuantifiedConstraints
        RankNTypes
        RoleAnnotations
        ScopedTypeVariables
        StandaloneDeriving
        StandaloneKindSignatures
        StrictData
        TupleSections
        TypeApplications
        TypeData
        TypeFamilies
        TypeOperators
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns

    if impl(ghc >= 9.8.1)
        default-extensions:
            TypeAbstractions

    build-depends:
        , base >=4.18 && <4.21
        , reflection >=2.1 && <2.2
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options: -Wall
