cabal-version:      2.4
name:               proarrow
version:            0
synopsis:           Category theory with a central role for profunctors
homepage:           https://github.com/sjoerdvisscher/proarrow
bug-reports:        https://github.com/sjoerdvisscher/proarrow/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sjoerd Visscher
maintainer:         sjoerd@w3future.com
category:           Math, Categories

extra-source-files:
    CHANGELOG.md
    README.md

common extensions
    default-language: GHC2024
    ghc-options:      -Wall
    default-extensions:
        BlockArguments
        DefaultSignatures
        DeriveAnyClass
        DerivingVia
        FunctionalDependencies
        GeneralizedNewtypeDeriving
        NoImplicitPrelude
        NoStarIsType
        PatternSynonyms
        QuantifiedConstraints
        StrictData
        TypeAbstractions
        TypeData
        TypeFamilies
        UndecidableInstances
        UndecidableSuperClasses
        ViewPatterns

library
    import: extensions
    exposed-modules:
        Proarrow
        Proarrow.Adjunction
        Proarrow.Category
        Proarrow.Category.Bicategory
        -- Proarrow.Category.Bicategory.Adj
        Proarrow.Category.Bicategory.Bidiscrete
        Proarrow.Category.Bicategory.CategoryAsBi
        Proarrow.Category.Bicategory.Co
        Proarrow.Category.Bicategory.Hom
        Proarrow.Category.Bicategory.Kan
        Proarrow.Category.Bicategory.Limit
        -- Proarrow.Category.Bicategory.Mod
        Proarrow.Category.Bicategory.MonoidalAsBi
        Proarrow.Category.Bicategory.Op
        Proarrow.Category.Bicategory.Product
        Proarrow.Category.Bicategory.Prof
        Proarrow.Category.Bicategory.Relative
        Proarrow.Category.Bicategory.Strictified
        Proarrow.Category.Bicategory.Sub
        Proarrow.Category.Bicategory.Terminal
        Proarrow.Category.Colimit
        Proarrow.Category.Enriched
        Proarrow.Category.Enriched.Dagger
        Proarrow.Category.Enriched.ThinCategory
        Proarrow.Category.Equipment
        Proarrow.Category.Equipment.BiAsEquipment
        Proarrow.Category.Equipment.Limit
        Proarrow.Category.Equipment.Stateful
        Proarrow.Category.Equipment.Quintet
        Proarrow.Category.Instance.Ap
        Proarrow.Category.Instance.Bool
        Proarrow.Category.Instance.Cat
        Proarrow.Category.Instance.Collage
        Proarrow.Category.Instance.Constraint
        Proarrow.Category.Instance.Coproduct
        Proarrow.Category.Instance.Cost
        Proarrow.Category.Instance.Discrete
        Proarrow.Category.Instance.Fin
        Proarrow.Category.Instance.Free
        Proarrow.Category.Instance.Hask
        Proarrow.Category.Instance.IntConstruction
        Proarrow.Category.Instance.Kleisli
        Proarrow.Category.Instance.Linear
        Proarrow.Category.Instance.Mat
        Proarrow.Category.Instance.Nat
        Proarrow.Category.Instance.PointedHask
        Proarrow.Category.Instance.Product
        Proarrow.Category.Instance.Prof
        Proarrow.Category.Instance.Rel
        Proarrow.Category.Instance.Simplex
        Proarrow.Category.Instance.Sub
        Proarrow.Category.Instance.Unit
        Proarrow.Category.Instance.Zero
        Proarrow.Category.Instance.ZX
        Proarrow.Category.Limit
        Proarrow.Category.Monoidal
        Proarrow.Category.Monoidal.Action
        Proarrow.Category.Monoidal.Applicative
        Proarrow.Category.Monoidal.Distributive
        Proarrow.Category.Monoidal.Endo
        Proarrow.Category.Monoidal.Optic
        Proarrow.Category.Monoidal.Strictified
        Proarrow.Category.Monoidal.Rev
        Proarrow.Category.Opposite
        Proarrow.Category.Promonoidal
        Proarrow.Core
        Proarrow.Functor
        Proarrow.Tools.CCC
        Proarrow.Tools.Laws
        Proarrow.Monoid
        Proarrow.Object
        Proarrow.Object.BinaryProduct
        Proarrow.Object.BinaryCoproduct
        Proarrow.Object.Coexponential
        Proarrow.Object.Copower
        Proarrow.Object.Dual
        Proarrow.Object.Exponential
        Proarrow.Object.Initial
        Proarrow.Object.Power
        Proarrow.Object.Terminal
        Proarrow.Profunctor
        Proarrow.Profunctor.Cofree
        Proarrow.Profunctor.Composition
        Proarrow.Profunctor.Constant
        Proarrow.Profunctor.Coproduct
        Proarrow.Profunctor.Corepresentable
        Proarrow.Profunctor.Costar
        Proarrow.Profunctor.Coyoneda
        Proarrow.Profunctor.Day
        Proarrow.Profunctor.Exponential
        Proarrow.Profunctor.Fix
        Proarrow.Profunctor.Fold
        Proarrow.Profunctor.Forget
        Proarrow.Profunctor.Free
        Proarrow.Profunctor.HaskValue
        Proarrow.Profunctor.Identity
        Proarrow.Profunctor.Initial
        Proarrow.Profunctor.List
        Proarrow.Profunctor.Product
        Proarrow.Profunctor.Ran
        Proarrow.Profunctor.Representable
        Proarrow.Profunctor.Rift
        Proarrow.Profunctor.Star
        Proarrow.Profunctor.Terminal
        Proarrow.Profunctor.Wrapped
        Proarrow.Profunctor.Yoneda
        Proarrow.Promonad
        Proarrow.Promonad.Cont
        Proarrow.Promonad.Reader
        Proarrow.Promonad.State
        Proarrow.Promonad.Writer
        Proarrow.Squares
        Proarrow.Squares.Limit
        Proarrow.Squares.Relative

    build-depends:
        , base >=4.18 && <4.22
        , containers >=0.6 && <0.7
        , reflection >=2.1 && <2.2
    hs-source-dirs:   src

test-suite test
    import: extensions
    type: exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:
        Props
        Props.Bool
        Props.Hask
        Props.Kleisli
        Props.Linear
        Props.PointedHask
        Props.Mat
        Testable
        TestFree
    build-depends:
        base
        , tasty >=1.4 && <1.5
        , falsify >=0.2 && <0.3
        , proarrow
